--- a/sass/2-Modules/_main-menu.scss
+++ b/sass/2-Modules/_main-menu.scss
@@ -35,7 +35,7 @@
 				}
 				@include breakpoint($tablet) {
 					position: absolute;
-					top: 50px;
+					top: 50%;
 					padding: 0 10px;
 				}
 			}
